--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" sizes="180x180" type="image/png" href="https://danielnikkari-portfolio.herokuapp.com/logo180.png" />
-    <link rel="apple-touch-icon" sizes="152x152" type="image/png" href="https://danielnikkari-portfolio.herokuapp.com/logo152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/logo152.png" />
+    <link rel="apple-touch-icon" sizes="64x64" href="/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
