--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/logo180.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="/logo152.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/logo192.png" />
     <link rel="apple-touch-icon" sizes="64x64" href="/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
