--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="https://danielnikkari-portfolio.herokuapp.com/favicon.png" />
-    <link rel="icon" type="image/png" href="https://danielnikkari.github.io/favicon.png" />
+    <link rel="icon" type="image/png" href="https://danielnikkari.github.io/react_portfolio/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo180.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/logo152.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/logo192.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/logo512.png" />
-    <link rel="apple-touch-icon" sizes="64x64" href="/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://danielnikkari.github.io/react_portfolio/logo180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="https://danielnikkari.github.io/react_portfolio/logo152.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="https://danielnikkari.github.io/react_portfolio/logo192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="https://danielnikkari.github.io/react_portfolio/logo512.png" />
+    <link rel="apple-touch-icon" sizes="64x64" href="https://danielnikkari.github.io/react_portfolio/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
